--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,8 @@
 title: STICK
 email: jeongteak06@naver.com
 description: >- # this means to ignore newlines until "baseurl:"
-baseurl: "테스트" # the subpath of your site, e.g. /blog
+  테스트
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://st1ck.kro.kr
 github_username:  stick0710
 
