--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,9 @@
 title: STICK
 email: jeongteak06@naver.com
 description: >- # this means to ignore newlines until "baseurl:"
-  테스트
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://st1ck.kro.kr
 github_username:  stick0710
