--- a/hexoblog/_config.yml
+++ b/hexoblog/_config.yml
@@ -102,4 +102,6 @@ theme: landscape
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git
+  repo: https://github.com/stick0710/stick0710.github.io
+  branch: master
