--- a/hexoblog/_config.yml
+++ b/hexoblog/_config.yml
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: http://st1ck.kro.kr
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
@@ -105,3 +105,6 @@ deploy:
   type: git
   repo: https://github.com/stick0710/stick0710.github.io
   branch: master
+
+plugins:
+- hexo-generator-cname
